--- a/TradeJournal/Views/Trades/Index.cshtml
+++ b/TradeJournal/Views/Trades/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewData["PageTitle"] = "Trades";
-    ViewData["PageActionText"] = "+ New Category";
+    ViewData["PageActionText"] = "+ Add trade";
     ViewData["PageActionUrl"] = "/Trades/AddOrEdit";
 }
 
