Działa dashboard, sidebar ma bugi lekkie stylizacyjne poza tym wszystko git

--- a/TradeJournal/Views/Shared/_Layout.cshtml
+++ b/TradeJournal/Views/Shared/_Layout.cshtml
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trade journal</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <!--link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/26.2.4/material.css" /-->
+    @*<link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.1.55/material.css" />*@
     <link href="https://cdn.syncfusion.com/ej2/20.1.55/bootstrap5-dark.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/TradeJournal.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
-
-    <script src="https://cdn.syncfusion.com/ej2/26.2.4/dist/ej2.min.js"></script>
+    <link rel="stylesheet" href="~/Expense_Tracker.styles.css" asp-append-version="true" />
+    <script src="https://cdn.syncfusion.com/ej2/20.1.55/dist/ej2.min.js"></script>
 
 </head>
 <body>
     <partial name="_SideBar" />
-    <
+    
 
     <header>
         <nav class="navbar sticky-top">
             <div class="container-fluid py-2 px-4">
-               <a href="/" class="fw-bold text-center" style="font-size:xx-large; text-decoration:none; color: white; font: inherit;">Trade journal</a>
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <div>
+                    <i class="fa-solid fa-bell"></i>
+                    <i class="fa-solid fa-message"></i>
+                </div>
             </div>
         </nav>
     </header>
