--- a/TradeJournal/Views/Dashboard/Index.cshtml
+++ b/TradeJournal/Views/Dashboard/Index.cshtml
@@ -100,3 +100,66 @@
 
     </div>
 </div>
+
+@*Recent trades*@
+<div class="row">
+    <div class="col-md-6">
+        <div class="p-4">
+            <h5 class="fw-bold">Recent trades</h5>
+            <ejs-grid id="recent-transactions" dataSource="@ViewBag.recentTrades" allowSorting="true" gridLines="None">
+                <e-grid-columns>
+                      <e-grid-column headerText="Symbol" field="SymbolName" ></e-grid-column>
+                      <e-grid-column headerText="Type" template="#typeTemplate"></e-grid-column>
+                      <e-grid-column headerText="Outcome" field="TradeOutcome"></e-grid-column>
+                </e-grid-columns>
+                <e-grid-aggregates>
+                    <e-grid-aggregate>
+                        <e-aggregate-columns >
+                            <e-aggregate-column field="TradeOutcome" type="Sum" format="C2"></e-aggregate-column>
+                        </e-aggregate-columns>
+                    </e-grid-aggregate>
+                </e-grid-aggregates>
+            </ejs-grid>
+
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="widget h-100">
+            <div class="d-flex justify-content-center align-items-center h-100">
+                <span><i class="fa-solid fa-plus fa-2xl"></i>Widget</span>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<script id="typeTemplate" type="text/x-template">
+    ${if(PositionType == "Long")}
+        <span class="badge bg-success">${PositionType}</span>
+    ${else}
+        <span class="badge bg-danger">${PositionType}</span>
+    ${/if}
+</script>
+
+
+
+<!--
+<script id="sumTemplate" type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function () {
+        // Oblicz sumę wartości TradeOutcome
+        var recentTrades = @Html.Raw(Json.Serialize(ViewBag.recentTrades));
+        var totalOutcome = recentTrades.reduce(function (acc, trade) {
+            return acc + trade.TradeOutcome;
+        }, 0);
+
+        // Zaktualizuj szablon Summary
+        var summaryTemplate = document.getElementById('SummaryTemplate').innerHTML;
+        summaryTemplate = summaryTemplate.replace('{{:totalOutcome}}', totalOutcome.toFixed(2));
+
+        // Zaktualizuj grid z nowym szablonem
+        var grid = document.getElementById('recent-transactions').ej2_instances[0];
+        grid.columns[3].template = summaryTemplate;
+        grid.refresh();
+    });
+</script>-->
