--- a/TradeJournal/Views/Shared/_SideBar.cshtml
+++ b/TradeJournal/Views/Shared/_SideBar.cshtml
@@ -2,9 +2,88 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    List<Object> menuItems = new List<Object>();
+    menuItems.Add(new
+    {
+        text = "General",
+        separator = true,
+    });
+    menuItems.Add(new
+    {
+        text = "Dashboard",
+        url = "/",
+        iconCss = "fa-solid fa-box", 
+    });
+    menuItems.Add(new
+    {
+        text = "Trades options",
+        iconCss="fa-solid fa-arrow-right-arrow-left", 
+        items = new List<Object>() 
+        {
+            new {text = "Add", url="/Trades/AddOrEdit"},
+            new {text = "Trades details", url="/Trades"},
+        }
+    });
+    menuItems.Add(new
+    {
+        text = "Accounts options",
+        iconCss = "fa-solid fa-user-alt",
+        items = new List<Object>() //buguje sie 
+        {
+            new {text = "Add"},
+            new {text = "Account details"},
+            new {text = "Sum accounts"}
+        }
+    });
+    menuItems.Add(new
+    {
+        text = "Extras",
+        separator = true,
+    });
+    menuItems.Add(new
+    {
+        text = "Reports",
+        iconCss = "fa-solid fa-bar-chart",
+        url = "#"
+    }); menuItems.Add(new
+    {
+        text = "Settings",
+        iconCss = "fa-solid fa-gear",
+        url = "#"
+    });
 }
 
+<ejs-sidebar enableGestures="false" target=".dock-target" dockSize="100px" enableDock id="sidebar" enableGestures="false" width="15vw">
+    <e-content-template >
 
-<ejs-sidebar id="sidebar" width="20vw">
+        <div class="logo-wrapper">
+            <div class="app-logo">
+                <img src="~/logo.png" />
+            </div>
+            <div class="w-100"></div>
+            <i id="sidebar-toggler" class="fa-solid"></i>
+        </div>
 
+        <div class="profile-wrapper">
+            <img class="profile-pic" src="~/profile.jpg" />
+            <div class="titles d-flex flex-column ps-3">
+                <h6 class="mb-0">Journal App</h6>
+                <span class="text-muted">YOUR NAME</span>
+            </div>
+        </div>
+        <ejs-menu id="menu" orientation="Vertical" items="menuItems" hamburgerMode>
+            
+        </ejs-menu>
+    </e-content-template>
+   
 </ejs-sidebar>
+
+<script  type="text/javascript">
+    document.addEventListener('DOMContentLoaded', function () {
+        dockBar = document.getElementById('sidebar').ej2_instances[0];
+        document.getElementById('sidebar-toggler').onclick = function () {
+            dockBar.toggle();
+        };
+    });
+
+</script>
