--- a/TradeJournal/Views/Shared/_SideBar.cshtml
+++ b/TradeJournal/Views/Shared/_SideBar.cshtml
@@ -21,14 +21,13 @@
         items = new List<Object>() 
         {
             new {text = "Add", url="/Trades/AddOrEdit"},
-            new {text = "Trades details", url="/Trades"},
-        }
+            new {text = "Trades details", url="/Trades"},        }
     });
     menuItems.Add(new
     {
         text = "Accounts options",
         iconCss = "fa-solid fa-user-alt",
-        items = new List<Object>() //buguje sie 
+        items = new List<Object>() 
         {
             new {text = "Add"},
             new {text = "Account details"},
