--- a/TradeJournal/Views/Journals/Index.cshtml
+++ b/TradeJournal/Views/Journals/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="AddOrEdit">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -15,12 +15,7 @@
             <th>
                 @Html.DisplayNameFor(model => model.Text)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Image)
-            </th>
+           
             <th>
                 @Html.DisplayNameFor(model => model.Trade)
             </th>
@@ -34,20 +29,22 @@
                 @Html.DisplayFor(modelItem => item.Text)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Image)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.Trade.Id)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="AddOrEdit" asp-route-id="@item.Id">Add Or Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+
+            <!--
+     <th>
+Html.DisplayNameFor(model => model.Title)
+</th>
+<Html.DisplayNameFor(model => model.Image)
+</th>
+            -->
