--- a/TradeJournal/Views/Journals/Index.cshtml
+++ b/TradeJournal/Views/Journals/Index.cshtml
@@ -4,12 +4,12 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Journals</h1>
 
 <p>
     <a asp-action="AddOrEdit">Create New</a>
 </p>
-<table class="table">
+<table class="table text-bold text-white">
     <thead>
         <tr>
             <th>
@@ -40,11 +40,3 @@
     </tbody>
 </table>
 
-
-            <!--
-     <th>
-Html.DisplayNameFor(model => model.Title)
-</th>
-<Html.DisplayNameFor(model => model.Image)
-</th>
-            -->
