--- a/TradeJournal/Views/Journals/Index.cshtml
+++ b/TradeJournal/Views/Journals/Index.cshtml
@@ -11,6 +11,7 @@
 </p>
 <table class="table text-bold text-white">
     <thead>
+        <!--Nagłówki-->
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Text)
@@ -19,9 +20,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.Trade)
             </th>
-            <th></th>
+            <th>Actions</th>
         </tr>
     </thead>
+    <!--Wypisywanie poprzez iteracje po BD-->
     <tbody>
 @foreach (var item in Model) {
         <tr>
