--- a/TradeJournal/Views/Trades/Details.cshtml
+++ b/TradeJournal/Views/Trades/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model TradeJournal.Models.Trade
+﻿@model TradeJournal.ViewModels.TradesJournalsViewModels
+        <!--model TradeJournal.ViewModels.TradesJournalsViewModels-->
 
 @{
     ViewData["Title"] = "Details";
@@ -11,80 +12,84 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TransactionOpenDate)
+            @Html.DisplayNameFor(model => model.Trade.TransactionOpenDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TransactionOpenDate)
+            @Html.DisplayFor(model => model.Trade.TransactionOpenDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TransactionCloseDate)
+            @Html.DisplayNameFor(model => model.Trade.TransactionCloseDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TransactionCloseDate)
+            @Html.DisplayFor(model => model.Trade.TransactionCloseDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SymbolName)
+            @Html.DisplayNameFor(model => model.Trade.SymbolName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SymbolName)
+            @Html.DisplayFor(model => model.Trade.SymbolName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PositionType)
+            @Html.DisplayNameFor(model => model.Trade.PositionType)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PositionType)
+            @Html.DisplayFor(model => model.Trade.PositionType)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PositionVolume)
+            @Html.DisplayNameFor(model => model.Trade.PositionVolume)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PositionVolume)
+            @Html.DisplayFor(model => model.Trade.PositionVolume)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EntryPrice)
+            @Html.DisplayNameFor(model => model.Trade.EntryPrice)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EntryPrice)
+            @Html.DisplayFor(model => model.Trade.EntryPrice)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.StopLoss)
+            @Html.DisplayNameFor(model => model.Trade.StopLoss)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.StopLoss)
+            @Html.DisplayFor(model => model.Trade.StopLoss)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TakeProfit)
+            @Html.DisplayNameFor(model => model.Trade.TakeProfit)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TakeProfit)
+            @Html.DisplayFor(model => model.Trade.TakeProfit)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Comission)
+            @Html.DisplayNameFor(model => model.Trade.Comission)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Comission)
+            @Html.DisplayFor(model => model.Trade.Comission)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Swap)
+            @Html.DisplayNameFor(model => model.Trade.Swap)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Swap)
+            @Html.DisplayFor(model => model.Trade.Swap)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TradeOutcome)
+            @Html.DisplayNameFor(model => model.Trade.TradeOutcome)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TradeOutcome)
+            @Html.DisplayFor(model => model.Trade.TradeOutcome)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PriceChange)
+            @Html.DisplayNameFor(model => model.Trade.PriceChange)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PriceChange)
+            @Html.DisplayFor(model => model.Trade.PriceChange)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-success" asp-route-id="@Model?.Id">Edit</a> 
+    <!-- tutaj notatki-->
+    @Html.Partial("AddOrEdit", Model.Journal)
+</div>
+<div>
+    <a asp-action="Edit" class="btn btn-success" asp-route-id="@Model?.Trade.Id">Edit</a> 
     <a asp-action="Index" class="btn btn-success">Back to List</a>
 </div>
