Naprawianie notatek, bład z renderowaniem widoku modelu w innym modelu. Linijka         await Html.PartialAsync("AddOrEdit", Model.Journal); W Views/Trades/Details

--- a/TradeJournal/Views/Dashboard/Index.cshtml
+++ b/TradeJournal/Views/Dashboard/Index.cshtml
@@ -111,7 +111,7 @@
                           <e-grid-column headerText="Id" field="Id"></e-grid-column>
                           <e-grid-column headerText="Symbol" field="SymbolName" ></e-grid-column>
                           <e-grid-column headerText="Type" template="#typeTemplate"></e-grid-column>
-                          <e-grid-column headerText="Outcome" field="TradeOutcome"></e-grid-column>
+                          <e-grid-column headerText="P/L" field="TradeOutcome"></e-grid-column>
                     </e-grid-columns>
                     <e-grid-aggregates>
                         <e-grid-aggregate>
