--- a/TradeJournal/Views/Trades/Index.cshtml
+++ b/TradeJournal/Views/Trades/Index.cshtml
@@ -21,7 +21,7 @@
                 <e-grid-column headerText="Take profit" field="TakeProfit" ></e-grid-column>
                 <!--e-grid-column headerText="Comission" field="Comission" ></!--e-grid-column-->
                 <!--e-grid-column headerText="Swap" field="Swap" ></!--e-grid-column-->
-                <e-grid-column headerText="Outcome" field="TradeOutcome" ></e-grid-column>
+                <e-grid-column headerText="P/L" field="TradeOutcome" ></e-grid-column>
                 <!--e-grid-column headerText="Change" field="PriceChange" ></!--e-grid-column-->
                 <e-grid-column headerText="Actions" template="#actionColumnTemplate"></e-grid-column>
 
