--- a/TradeJournal/Views/Trades/AddOrEdit.cshtml
+++ b/TradeJournal/Views/Trades/AddOrEdit.cshtml
@@ -12,17 +12,17 @@
             <input type="hidden" asp-for="Id" />
 
             <div class="mb-3">
-                <ejs-datepicker id="TransactionOpenDate" name="Transaction open date" value="@(Model.Id == 0 ? "" : Model.TransactionOpenDate)" placeholder="Open date" floatLabelType="Auto" format="yyyy-MM-dd"></ejs-datepicker>
+                <ejs-datepicker id="TransactionOpenDate" name="TransactionOpenDate" placeholder="Open date" floatLabelType="Auto" format="yyyy-MM-dd"></ejs-datepicker>
                 <span asp-validation-for="TransactionOpenDate" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-datepicker id="TransactionCloseDate" name="Transaction close date" value="@(Model.Id == 0 ? "" : Model.TransactionOpenDate)" placeholder="Close date" floatLabelType="Auto" format="yyyy-MM-dd"></ejs-datepicker>
+                <ejs-datepicker id="TransactionCloseDate" name="TransactionCloseDate" placeholder="Close date" floatLabelType="Auto" format="yyyy-MM-dd"></ejs-datepicker>
                 <span asp-validation-for="TransactionCloseDate" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="SymbolName" name="Symbol name" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.SymbolName)" placeholder="Symbol name"></ejs-textbox>
+                <ejs-textbox id="SymbolName" name="SymbolName" floatLabelType="Auto" placeholder="Symbol name"></ejs-textbox>
                 <span asp-validation-for="SymbolName" class="text-danger"></span>
             </div>
 
@@ -36,42 +36,42 @@
                 <span asp-validation-for="PositionType" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <ejs-textbox id="PositionVolume" name="Position volume" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.PositionVolume)" placeholder="Position volume"></ejs-textbox>
+                <ejs-textbox id="PositionVolume" name="PositionVolume" floatLabelType="Auto" placeholder="Position volume"></ejs-textbox>
                 <span asp-validation-for="PositionVolume" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="EntryPrice" name="Entry price" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.EntryPrice)" placeholder="Entry price"></ejs-textbox>
+                <ejs-textbox id="EntryPrice" name="EntryPrice" floatLabelType="Auto" placeholder="Entry price"></ejs-textbox>
                 <span asp-validation-for="EntryPrice" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="StopLoss" name="Stop loss" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.StopLoss)" placeholder="SL"></ejs-textbox>
+                <ejs-textbox id="StopLoss" name="StopLoss" floatLabelType="Auto" placeholder="SL"></ejs-textbox>
                 <span asp-validation-for="StopLoss" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="TakeProfit" name="Take profit" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.TakeProfit)" placeholder="TP"></ejs-textbox>
+                <ejs-textbox id="TakeProfit" name="TakeProfit" floatLabelType="Auto" placeholder="TP"></ejs-textbox>
                 <span asp-validation-for="TakeProfit" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="Comission" name="Comission" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.Comission)" placeholder="Comission"></ejs-textbox>
+                <ejs-textbox id="Comission" name="Comission" floatLabelType="Auto" placeholder="Comission"></ejs-textbox>
                 <span asp-validation-for="Comission" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="Swap" name="Swap" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.Swap)" placeholder="Swap"></ejs-textbox>
+                <ejs-textbox id="Swap" name="Swap" floatLabelType="Auto" placeholder="Swap"></ejs-textbox>
                 <span asp-validation-for="Swap" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="TradeOutcome" name="P/L" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.TradeOutcome)" placeholder="P/L"></ejs-textbox>
+                <ejs-textbox id="TradeOutcome" name="TradeOutcome" floatLabelType="Auto" placeholder="TradeOutcome"></ejs-textbox>
                 <span asp-validation-for="TradeOutcome" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="PriceChange" name="Price change" floatLabelType="Auto" value="@(Model.Id == 0 ? "" : Model.PriceChange)" placeholder="Price change (%)"></ejs-textbox>
+                <ejs-textbox id="PriceChange" name="PriceChange" floatLabelType="Auto" placeholder="Price change (%)"></ejs-textbox>
                 <span asp-validation-for="PriceChange" class="text-danger"></span>
             </div>
             <div class="mb-3 d-flex justify-content-center align-content-center">
@@ -86,14 +86,3 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-
-<!--<form asp-action="ImportCsv" method="post" enctype="multipart/form-data">
-    <div>
-        <label for="file">Upload CSV file:</label>
-        <input type="file" name="file" />
-    </div>
-    <div>
-        <button type="submit">Import</button>
-    </div>
-</form>
--->
