--- a/TradeJournal/Views/Trades/Index.cshtml
+++ b/TradeJournal/Views/Trades/Index.cshtml
@@ -24,7 +24,7 @@
                 <e-grid-column headerText="P/L" field="TradeOutcome" ></e-grid-column>
                 <!--e-grid-column headerText="Change" field="PriceChange" ></!--e-grid-column-->
                 <e-grid-column headerText="Actions" template="#actionColumnTemplate"></e-grid-column>
-
+                <e-grid-column headerText="Id" field="Id"></e-grid-column>
             </e-grid-columns>
         </ejs-grid>
     </div>
