--- a/TradeJournal/Views/Auths/Login.cshtml
+++ b/TradeJournal/Views/Auths/Login.cshtml
@@ -17,7 +17,7 @@
             </div>
 
             <div class="mb-3">
-                <ejs-textbox id="Password" name="Password" placeholder="Password" floatLabelType="Auto"></ejs-textbox>
+                <ejs-textbox id="Password" type="password" name="Password" placeholder="Password" floatLabelType="Auto"></ejs-textbox>
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
 
@@ -25,6 +25,10 @@
                 <ejs-button cssClass="w-100" id="submit" type="submit" content="Login"></ejs-button>
             </div>
         </form>
+        <div>
+            <a asp-action="Register">I want to register.</a>
+        </div>
+
     </div>
 </div>
 
